# ChangeLog for media-fonts/ttf-bitstream-vera
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-fonts/ttf-bitstream-vera/ChangeLog,v 1.22 2007/02/22 01:16:28 peper Exp $

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  01 Jul 2006; Donnie Berkholz <spyderous@gentoo.org>;
  ttf-bitstream-vera-1.10-r3.ebuild:
  mips/sh stable.

  11 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  ttf-bitstream-vera-1.10-r3.ebuild:
  Add ~x86-fbsd keyword.

  05 Apr 2006; Donnie Berkholz <spyderous@gentoo.org>;
  ttf-bitstream-vera-1.10-r3.ebuild:
  Fix xorg-x11 metabuild dep issues.

  23 Mar 2006; Donnie Berkholz <spyderous@gentoo.org>;
  -ttf-bitstream-vera-1.10-r2.ebuild:
  Get rid of ebuild unported to modular X, it's breaking category-level commits.

  16 Sep 2005; <dang@gentoo.org> ttf-bitstream-vera-1.10-r3.ebuild:
  Marked stable on amd64

  13 Sep 2005; Aron Griffis <agriffis@gentoo.org>
  ttf-bitstream-vera-1.10-r3.ebuild:
  Mark 1.10-r3 stable on alpha

  02 Sep 2005; Michael Hanselmann <hansmi@gentoo.org>
  ttf-bitstream-vera-1.10-r3.ebuild:
  Stable on ppc.

  29 Aug 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  ttf-bitstream-vera-1.10-r3.ebuild:
  Stable on sparc

  29 Aug 2005; Leonardo Boshell <leonardop@gentoo.org>
  ttf-bitstream-vera-1.10-r3.ebuild:
  Stable on x86.

  01 Apr 2005; Aron Griffis <agriffis@gentoo.org>
  ttf-bitstream-vera-1.10-r3.ebuild:
  stable on ia64

  03 Jan 2005; Markus Rothe <corsair@gentoo.org>
  ttf-bitstream-vera-1.10-r3.ebuild:
  Stable on ppc64

  07 Jun 2004; Aron Griffis <agriffis@gentoo.org>
  ttf-bitstream-vera-1.10-r2.ebuild:
  Fix use invocation

*ttf-bitstream-vera-1.10-r3 (31 May 2004)

  31 May 2004; foser <foser@gentoo.org> ttf-bitstream-vera-1.10-r3.ebuild :
  Use font.eclass

  17 Jan 2004; Bartosch Pixa <darkspecter@gentoo.org> :
  manifest fix

  16 Jan 2004; Bartosch Pixa <darkspecter@gentoo.org>