@@ -1,4 +1,4 @@
 DIST ttf-bitstream-vera-1.10.tar.bz2 264276 RMD160 23f7f609794388b68f539d70b600bc3c37dfe37e SHA1 c3e8505a58d52e198a02960a2bd295e4c7a14242 SHA256 db5b27df7bbb318036ebdb75acd3e98f1bd6eb6608fb70a67d478cd243d178dc
 EBUILD ttf-bitstream-vera-1.10-r3.ebuild 531 RMD160 ea9215a53c190bd75b8701b4a71c8dde97b3cd17 SHA1 5728aeaa960b5dcea31764f490b3af1691d3e710 SHA256 e30f0bb41dbaf3d1b6d9c11fd1a8cdf922a6da8bf60b535b734b14e5db2dd558
-MISC ChangeLog 3072 RMD160 7438a53b48d902a1d6331c6811ded5e2a2db7134 SHA1 87b2e462199321f5ba1d863d2d7194153f185b86 SHA256 df74859944cb3a78663d993aafc5707fbc2f37c2fa3e3e7b38c02167bc9f32cf
-MISC metadata.xml 286 RMD160 1b9f96d207803342ed86512e8fbfde5660569d6e SHA1 f78ea0707f02390c7f922fb4376149e577775df9 SHA256 3610e9d9eacc0d192a54da9e3437be8264deda8126ad8ec411d38e77ec7a48a6
+MISC ChangeLog 3189 RMD160 507cc94e23394d8ad4dd654d7540e7691e6817c9 SHA1 63c59232345e5bd30a6ea657aeb3b02c927d61df SHA256 6ad5b21ce5fcc375a84de49b2a54f5291fb7d4ee979df28bd2bd6d3c72a570d5
+MISC metadata.xml 159 RMD160 488f58f504e5c2e7b10e253fd9db5f1e6f9d3a21 SHA1 16c86b590ee3d78c8ccd5b5044835ed4a4038d93 SHA256 b1ccd57b80d8d6ee7a9924844efd69830edfb744ab818d67e50a008b5aae7d4b
