@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>gnome</herd>
-<maintainer>
-  <email>foser@gentoo.org</email>
-  <description>Part of the Gnome core distribution. </description>
-</maintainer>
+	<herd>gnome</herd>
 </pkgmetadata>
